style.css
body {
  font-family: Arial, sans-serif;
  background-color: skyblue;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.container {
  background-color: white;
  width: 90%;
  max-width: 600px;
  padding: 12px;
  border-radius: 10px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
}

button {
  background-color: gray;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  margin: 10px;
  transition: background-color 0.3s transform 0.3s;
}

button:hover {
  background-color: darkgray;
  transform: scale(1.05);
}

#result {
  margin-top: 20px;
  font-size: 18px;
  font-weight: bold;
  color: green;
}

